# RTv1

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: RTv1.h  color.h  figure.h  light.h  rtv1.h  vector.h
scenes/: cone.scene  cylinder.scene  multi.scene  multi2.scene  multi3.scene  plane.scene  sphere.scene
src/: do_rt.c  main.c  space.c
src/color/: color.c
src/figure/: cone.c  figure.c  plane.c  sphere.c
src/json/: json_arrerr.c  json_err.c  json_global_getter.c  json_start.c
src/light/: light.c
src/parse/: ft_atod.c  parse.c  parse_cam.c  parse_error.c  parse_fcone.c  parse_fcylinder.c  parse_fplane.c  parse_fsphere.c  parse_light.c
src/vector/: rotate.c
srcs/: do_rt.c  main.c  space.c
srcs/color/: color.c
srcs/figure/: gl.c  sphere.c
srcs/light/: light.c
srcs/vector/: vector.c  vector2.c
